tests/baselines/reference/getterErrorMessageNotDuplicated.errors.txt
tests/cases/compiler/getterErrorMessageNotDuplicated.ts(2,9): error TS2380: The return type of a 'get' accessor must be assignable to its 'set' accessor type
  Property 'extra' is missing in type 'Foo' but required in type 'Bar'.


==== tests/cases/compiler/getterErrorMessageNotDuplicated.ts (1 errors) ====
    interface Thing {
        get style(): Foo;
            ~~~~~
!!! error TS2380: The return type of a 'get' accessor must be assignable to its 'set' accessor type
!!! error TS2380:   Property 'extra' is missing in type 'Foo' but required in type 'Bar'.
!!! related TS2728 tests/cases/compiler/getterErrorMessageNotDuplicated.ts:12:5: 'extra' is declared here.
        set style(cssText: string | Bar);
    }
    
    interface Foo {
        hello: string;
        world: number;
    }
    
    interface Bar extends Foo {
        extra: any;
    }